--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+		<!-- SEO Title -->
+	<title>Atul Joshi | Full Stack Java Developer Portfolio</title>
+
+	<!-- Meta Description -->
+	<meta name="description"
+		content="Official portfolio website of Atul Joshi, a Full Stack Java Developer skilled in Java, Spring Boot, React.js, HTML, CSS, JavaScript, Hibernate, JSP and MySQL. View resume, skills, education and contact details.">
+
+	<!-- Keywords (Optional) -->
+	<meta name="keywords"
+		content="Atul Joshi, Full Stack Java Developer, Java Developer, Spring Boot Developer, React Developer, Web Developer Portfolio, Java Projects, HTML CSS JavaScript, Hibernate Developer">
+
+	<!-- Author -->
+	<meta name="author" content="Atul Joshi">
+
 	<!--font-family-->
 	<link
 		href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext"
 		rel="stylesheet">
-
-	<!-- title of site -->
-	<title>AtulInfo</title>
 
 	<!-- For favicon png -->
 	<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.ico" />
@@ -108,7 +119,7 @@
 					<div class="header-text">
 						<h2>hi <span>,</span> i am <br> Atul <br> Joshi <span>.</span> </h2>
 						<p>Full Stack Java Developer</p>
-						<a href="assets/download/Atul Joshi Resume (2).pdf" download>download resume</a>
+						<a href="assets/download/Resume_Atul_Joshi.pdf" download>download resume</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
