--- a/index.html
+++ b/index.html
@@ -139,10 +139,15 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								I am a full stack java developer and Web developer.I bring a strong foundation in web
+								Hi, I’m Atul Joshi, a passionate Full Stack Developer who loves building modern, responsive, and high-performance web applications.
+								I specialize in developing complete web solutions — from designing clean and user-friendly frontends to creating secure and scalable backends. 
+								I enjoy solving real-world problems using technology and always focus on writing clean, efficient, and maintainable code.
+								I work with technologies like HTML, CSS, JavaScript, React, Node.js, Express, MongoDB, and other modern tools to build full-stack applications
+								that are fast, functional, and user-focused.
+								<!-- I am a full stack java developer and Web developer.I bring a strong foundation in web
 								development and enterprise-level technologies to the table. With expertise in Html, Css,
 								JavaScript, Java, Hibernate, jsp and Spring and Spring boot I've successfully developed
-								and delivered numerous projects.
+								and delivered numerous projects. -->
 
 							</h3>
 							<p>
@@ -175,7 +180,7 @@
 					</div>
 					<div class="col-sm-offset-1 col-sm-5">
 						<div class="single-about-img">
-							<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+							<img src="assets/images/about/AtulImage2.jpg" alt="profile_image">
 							<div class="about-list-icon">
 								<ul>
 									<li>
@@ -373,8 +378,8 @@
 								<div class="row">
 									<div class="col-md-5">
 										<div class="experience-time text-right">
-											<h2>December 2023 – May 2024</h2>
-											<h3>Java Developer</h3>
+											<h2>September 2026 – December 2026</h2>
+											<h3>Full Stack Developer</h3>
 										</div><!--/.experience-time-->
 									</div><!--/.col-->
 									<div class="col-md-offset-1 col-md-5">
@@ -382,15 +387,15 @@
 											<div class="timeline-content">
 												<h4 class="title">
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Ducat tech limited
+													Source Code Control Limited 
 												</h4>
-												<h5>Noida , uttar pradesh</h5>
+												<h5>Jhandewalan,Delhi</h5>
 												<p class="description">
-													Worked a Software Development Intern at DUCAT, I worked on various
-													projects that honed my skills in Java,
-													HTML,CSS, and JavaScript. I gained hands-on experience with Spring
-													and Hibernate frameworks, developing
-													robust scalable applications.
+													Full Stack Developer with internship experience at Source Code Control, skilled in Java, Spring Boot, React.js, TypeScript, 
+													and .NET. Hands-on experience with SQL, REST APIs, CI/CD pipelines, GitHub Actions, and Microsoft Azure for building, 
+													automating, and deploying scalable web applications. Strong problem-solving abilities, collaborative mindset, and 
+													adaptability to modern development workflows. Commitment to continuous learning and improvement drives success in 
+													rapidly evolving tech environments. 
 												</p>
 											</div><!--/.timeline-content-->
 										</div><!--/.timeline-->
@@ -554,10 +559,12 @@
 					<div class="col-md-offset-1 col-md-5 col-sm-6">
 						<div class="single-contact-box">
 							<div class="contact-form">
-								<form>
+							
+								<form action="https://api.web3forms.com/submit" method="POST">
 									<div class="row">
 										<div class="col-sm-6 col-xs-12">
 											<div class="form-group">
+												  <input type="hidden" name="access_key" value="7bdaf063-8be4-4b91-be34-d128eaa4ee9a">
 												<input type="text" class="form-control" id="name" placeholder="Name*"
 													name="name">
 											</div><!--/.form-group-->
@@ -588,11 +595,14 @@
 									<div class="row">
 										<div class="col-sm-12">
 											<div class="single-contact-btn">
-												<a class="contact-btn" href="#" role="button">submit</a>
+												<button class="contact-btn">Submit</button>
+												<!-- <a class="contact-btn" href="#" role="button">submit</a> -->
 											</div><!--/.single-single-contact-btn-->
 										</div><!--/.col-->
 									</div><!--/.row-->
 								</form><!--/form-->
+
+								
 							</div><!--/.contact-form-->
 						</div><!--/.single-contact-box-->
 					</div><!--/.col-->
